--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "init": "^0.1.2",
     "mysql2": "^3.0.1"
+  },
+  "scripts": {
+    "dev": "nodemon src/index.js"
   }
 }
